[package]
name = "unit-converter"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "global-shortcut-all", "window-set-size", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.26.2"
strum_macros = "0.26.2"
webkit2gtk = "0.18"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
